# asgi_benchmark

./: fastapi_app_async.py  fastapi_app_redis_sync.py  fastapi_app_sync.py  pyproject.toml  single.js  starlette_app_async.py  start_redis.sh  uvicorn_app_async.py  uvicorn_app_sync.py
