[tool.poetry]
name = "asgi_benchmark"
version = "0.1.0"
description = ""
authors = ["Florian Boucault <florian.boucault@grafana.com>"]

[tool.poetry.dependencies]
python = "^3.9"
uvicorn = "^0.15.0"
redis = "^4.0.0"
fastapi = "^0.70.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
